syntax = "proto3";

import "pkg/protocol/core/base/base.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

package pbcrs;

option go_package = "github.com/TencentBlueKing/bk-bscp/pkg/protocol/core/credential-scope;pbcrs";

message CredentialScopeAttachment {
  uint32 biz_id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "业务ID" }];
  uint32 credential_id = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "客户端密钥ID" }];
}

message CredentialScopeList {
  uint32 id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "客户端密钥关联服务ID" }];
  CredentialScopeSpec spec = 2;
  CredentialScopeAttachment attachment = 3;
  pbbase.Revision revision = 4;
}

message CredentialScopeSpec {
  string app = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务名称" }];
  string scope = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "关联规则" }];
}

message UpdateScopeSpec {
  uint32 id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "客户端密钥关联服务ID" }];
  string app = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务名称" }];
  string scope = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "关联规则" }];
}