syntax = "proto3";

import "protoc-gen-openapiv2/options/annotations.proto";

package pbrg;

option go_package = "github.com/TencentBlueKing/bk-bscp/pkg/protocol/core/released-group;pbrg";

// ReleasedGroup source resource reference: pkg/dal/table/released_group.go
message ReleasedGroup {
  uint32 id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务版本分组ID" }];
  uint32 group_id = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "分组ID" }];
  uint32 app_id = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务ID" }];
  uint32 release_id = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务版本ID" }];
  uint32 strategy_id = 5;
  bool edited = 6;
  uint32 biz_id = 7 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "业务ID" }];
}